[package]
name = "btrfs-nostd"
version = "0.1.0"
edition = "2021"
description = "no_std btrfs filesystem with read/write support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/suhteevah/btrfs-nostd"
keywords = ["btrfs", "filesystem", "no_std", "embedded", "bare-metal"]
categories = ["no-std", "filesystem", "embedded"]
authors = ["Matt Gates <suhteevah@gmail.com>"]
readme = "README.md"

[dependencies]
log = { version = "0.4", default-features = false }
